--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.5.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.468.0",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
@@ -37,7 +40,9 @@
     "react-resizable-panels": "^2.1.7",
     "stripe": "^17.6.0",
     "tempo-devtools": "^2.0.99",
-    "vaul": "^1.1.2"
+    "uuid": "^9.0.1",
+    "vaul": "^1.1.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -45,6 +50,7 @@
     "@types/react-dom": "^18",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "postcss": "^8",
+    "rimraf": "^5.0.10",
     "tailwind-merge": "^2",
     "tailwindcss": "^3",
     "tailwindcss-animate": "^1",
